2008-10-25  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_signal.rb: use assert_const_defined.

2008-10-16  Kouhei Sutou  <kou@cozmixng.org>

	* TODO: add.

2008-10-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h: 0.18.0 -> 0.19.0.

2008-09-30  Andy Spencer

	* src/depend (install): install glib-enum-types.h. [#2106938]

2008-09-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (g_key_file_get_type): move to ...
	* src/rbgobject.h: ... here.

2008-09-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_maincontext.c: use VALUE not guint to
	rb_set_end_proc()'s data. This will fix Debian bug [#490305].

2008-09-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_object.c (holder_free): fix memory leak.

2008-09-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb (check_cairo): support rcairo in gem.
	Suggested by OBATA Akio. Thanks!!!

2008-09-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h: 0.17.0 -> 0.18.0.

2008-09-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_object.c: cleanup.

	* src/rbgobj_object.c: destroy object on weak notify. [Bug #2060606]
	Reported by Arnaud Cornet. Thanks!!!

2008-07-27  Sjoerd Simons  <sjoerd@luon.net>

	* src/rbgobj_closure.c: Only use G_REMOVE_RELATIVE when a closure is
	directly invalidated. This prevents object creation when freeing the
	closure from the garbage collector.

2008-07-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_object.c (gobj_get_property): fix a bug introduced in
	r2740. (Gtk::Image#stock returns String not Symbol)

2008-06-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb (create_makefile_at_srcdir): allow source
	directory that isn't absolute path.
	Reported by Guillaume Cottenceau. Thanks!!!

2008-06-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_type.c (rbgobj_lookup_class_by_gtype_body): add
	create_class option.

	* src/rbgobject.h (GTYPE2CINFO_NO_CREATE): add.

	* src/rbgobject.h, src/rbgobj_type.c
	(rbgobj_lookup_class_by_gtype_full): add.
