@@ -45,11 +45,11 @@ rbglib_m_spawn_async_with_pipes(self, working_directory, argv, envp, flags)
 
     if (! NIL_P(argv)){
         Check_Type(argv, T_ARRAY);
-        gargc = RARRAY(argv)->len;
+        gargc = RARRAY_LEN(argv);
         gargv = ALLOCA_N(gchar*, gargc + 1);
         for (i = 0; i < gargc; i++) {
-            if (TYPE(RARRAY(argv)->ptr[i]) == T_STRING) {
-                gargv[i] = RVAL2CSTR(RARRAY(argv)->ptr[i]);
+            if (TYPE(RARRAY_PTR(argv)[i]) == T_STRING) {
+                gargv[i] = RVAL2CSTR(RARRAY_PTR(argv)[i]);
             }
             else {
                 gargv[i] = "";
@@ -60,11 +60,11 @@ rbglib_m_spawn_async_with_pipes(self, working_directory, argv, envp, flags)
 
     if (! NIL_P(envp)){
         Check_Type(envp, T_ARRAY);
-        genc = RARRAY(envp)->len;
+        genc = RARRAY_LEN(envp);
         genvp = ALLOCA_N(gchar*, genc + 1);
         for (i = 0; i < genc; i++) {
-            if (TYPE(RARRAY(envp)->ptr[i]) == T_STRING) {
-                genvp[i] = RVAL2CSTR(RARRAY(envp)->ptr[i]);
+            if (TYPE(RARRAY_PTR(envp)[i]) == T_STRING) {
+                genvp[i] = RVAL2CSTR(RARRAY_PTR(envp)[i]);
             }
             else {
                 genvp[i] = "";
@@ -108,11 +108,11 @@ rbglib_m_spawn_async(self, working_directory, argv, envp, flags)
 
     if (! NIL_P(argv)){
         Check_Type(argv, T_ARRAY);
-        gargc = RARRAY(argv)->len;
+        gargc = RARRAY_LEN(argv);
         gargv = ALLOCA_N(gchar*, gargc + 1);
         for (i = 0; i < gargc; i++) {
-            if (TYPE(RARRAY(argv)->ptr[i]) == T_STRING) {
-                gargv[i] = RVAL2CSTR(RARRAY(argv)->ptr[i]);
+            if (TYPE(RARRAY_PTR(argv)[i]) == T_STRING) {
+                gargv[i] = RVAL2CSTR(RARRAY_PTR(argv)[i]);
             }
             else {
                 gargv[i] = "";
@@ -123,11 +123,11 @@ rbglib_m_spawn_async(self, working_directory, argv, envp, flags)
 
     if (! NIL_P(envp)){
         Check_Type(envp, T_ARRAY);
-        genc = RARRAY(envp)->len;
+        genc = RARRAY_LEN(envp);
         genvp = ALLOCA_N(gchar*, genc + 1);
         for (i = 0; i < genc; i++) {
-            if (TYPE(RARRAY(envp)->ptr[i]) == T_STRING) {
-                genvp[i] = RVAL2CSTR(RARRAY(envp)->ptr[i]);
+            if (TYPE(RARRAY_PTR(envp)[i]) == T_STRING) {
+                genvp[i] = RVAL2CSTR(RARRAY_PTR(envp)[i]);
             }
             else {
                 genvp[i] = "";
@@ -169,11 +169,11 @@ rbglib_m_spawn_sync(self, working_directory, argv, envp, flags)
 
     if (! NIL_P(argv)){
         Check_Type(argv, T_ARRAY);
-        gargc = RARRAY(argv)->len;
+        gargc = RARRAY_LEN(argv);
         gargv = ALLOCA_N(gchar*, gargc + 1);
         for (i = 0; i < gargc; i++) {
-            if (TYPE(RARRAY(argv)->ptr[i]) == T_STRING) {
-                gargv[i] = RVAL2CSTR(RARRAY(argv)->ptr[i]);
+            if (TYPE(RARRAY_PTR(argv)[i]) == T_STRING) {
+                gargv[i] = RVAL2CSTR(RARRAY_PTR(argv)[i]);
             }
             else {
                 gargv[i] = "";
@@ -184,11 +184,11 @@ rbglib_m_spawn_sync(self, working_directory, argv, envp, flags)
 
     if (! NIL_P(envp)){
         Check_Type(envp, T_ARRAY);
-        genc = RARRAY(envp)->len;
+        genc = RARRAY_LEN(envp);
         genvp = ALLOCA_N(gchar*, genc + 1);
         for (i = 0; i < genc; i++) {
-            if (TYPE(RARRAY(envp)->ptr[i]) == T_STRING) {
-                genvp[i] = RVAL2CSTR(RARRAY(envp)->ptr[i]);
+            if (TYPE(RARRAY_PTR(envp)[i]) == T_STRING) {
+                genvp[i] = RVAL2CSTR(RARRAY_PTR(envp)[i]);
             }
             else {
                 genvp[i] = "";
