@@ -283,11 +283,11 @@ rbglib_m_parse_debug_string(self, string, keys)
 
     Check_Type(keys, T_HASH);
     ary = rb_funcall(keys, rb_intern("to_a"), 0);
-    nkeys = RARRAY(ary)->len;
+    nkeys = RARRAY_LEN(ary);
     gkeys = g_new(GDebugKey, nkeys);
     for (i = 0; i < nkeys; i++) {
-        gkeys[i].key = RVAL2CSTR(RARRAY(RARRAY(ary)->ptr[i])->ptr[0]);
-        gkeys[i].value = NUM2UINT(RARRAY(RARRAY(ary)->ptr[i])->ptr[1]);
+        gkeys[i].key = RVAL2CSTR(RARRAY_PTR(RARRAY_PTR(ary)[i])[0]);
+        gkeys[i].value = NUM2UINT(RARRAY_PTR(RARRAY_PTR(ary)[i])[1]);
     }
    
     ret = UINT2NUM(g_parse_debug_string(RVAL2CSTR(string), gkeys, nkeys));
